// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashLink.vue Should display a full link to the address 1`] = `
<span><a href="#/address/0x2D481eeb2bA97955CD081Cf218f453A817259AB1" class="">0x2D481eeb2bA97955CD081Cf218f453A817259AB1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x2D481eeb2bA97955CD081Cf218f453A817259AB1" value="0x2D481eeb2bA97955CD081Cf218f453A817259AB1"></span>
<!----></span>
`;

exports[`HashLink.vue Should display a shortened link to the address 1`] = `
<span><a href="#/address/0x2D481eeb2bA97955CD081Cf218f453A817259AB1" class="">0x2D481eeb...59AB1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x2D481eeb2bA97955CD081Cf218f453A817259AB1" value="0x2D481eeb2bA97955CD081Cf218f453A817259AB1"></span>
<!----></span>
`;

exports[`HashLink.vue Should not display anything if no hash provided 1`] = `<span><!----> <!----> <!----></span>`;
